--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   },
   "devDependencies": {
     "lerna": "^3.16.4"
+  },
+  "dependencies": {
+    "@sanity/production-preview": "^2.2.6"
   }
 }
